Fix single cell overflow issue

--- a/resources/public/css/reabledit.css
+++ b/resources/public/css/reabledit.css
@@ -21,10 +21,9 @@
   display: flex;
   flex: 1 1 0;
   min-width: 100px;
-  align-items: center;
   background-color: #fff;
   border: 1px solid #ddd;
-  height: 40px;
+  height: 30px;
 }
 
 .reabledit-cell.selected {
@@ -64,7 +63,7 @@
 .reabledit-dropdown-item {
   display: flex;
   align-items: center;
-  height: 40px;
+  height: 30px;
 }
 
 .reabledit-dropdown-item.selected {
